# sessionizer-v2

./: Cargo.toml  LICENSE  README.md
crates/sessionizer/: Cargo.toml
crates/sessionizer/src/: main.rs  ping.rs  prelude.rs  server.rs
crates/sessionizer/src/tmux/: server.rs
crates/sessionizerd/: Cargo.toml
crates/sessionizerd/src/: main.rs  prelude.rs  server.rs
lib/events/: Cargo.toml
lib/events/src/: lib.rs  misc.rs  server.rs
xtask/src/: cli.rs  main.rs  scripts.rs
