[package]
name = "sessionizer"
version = "0.1.0"
description = "Sessionizer client"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sessionizer"
path = "src/main.rs"

[dependencies]
events = { version = "0.0.0", path = "../../lib/events" }
clap = { workspace = true, features = ["derive", "string", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
