[package]
name = "sessionizerd"
version = "0.1.0"
description = "Sessionizer server"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sessionizerd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "string"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
